--- a/src/index.css
+++ b/src/index.css
@@ -11,47 +11,67 @@ body #root,
 .content {
   width: 100%;
   height: 100%;
-  font-family: "Roboto", sans-serif;
-  cursor: url("../src/assets/icons/cursor.svg"), auto;
+  font-family: "Roboto", sans-serif !important;
 }
-img {
-  cursor: url("../src/assets/icons/cursor.svg"), auto;
-}
+
 .app {
   display: flex;
   position: relative;
+}
+
+.content {
+  overflow: visible;
 }
 ::-webkit-scrollbar {
   width: 10px;
 }
 
+.cursor,
+.table-cell,
+img {
+  cursor: url("../src/assets/icons/cursor.svg"), auto;
+}
+
+.table-row:hover {
+  background-color: #7c7c7c0e;
+}
+
 .menu-item {
   display: flex;
-  justify-content: space-evenly;
-  width: 208px;
   align-items: center;
   transition: all 300ms ease;
   font-size: 14px;
   font-weight: 500;
-  padding: 10px;
+  padding: 10px 0px;
+  color: #474f54;
+  cursor: url("../src/assets/icons/cursor.svg"), auto;
 }
 
 .menu-item:hover {
   cursor: url("../src/assets/icons/cursor.svg");
+  background-color: #474f541b;
+  border-radius: 8px;
 }
 
+.menu-item:last-child {
+  position: absolute;
+  bottom: 0;
+  width: 220px;
+  background-color: #fafafa;
+}
 .active {
   background-color: #f95d44;
   border-radius: 8px;
   color: white;
 }
 
-.menu-item:last-child {
-  background: black;
+.menu-item.active:hover {
+  background-color: #f95d44;
 }
 
 .card:hover {
   border: 2px solid #1db385;
+  cursor: url("../src/assets/icons/cursor.svg"), auto;
 }
 
 .card:hover .icon {
@@ -85,34 +105,14 @@ img {
   padding: 5px;
 }
 
+.this-month {
+  font-size: 10px;
+}
+
 .tooltip-img {
   height: 61px;
 }
 
-.arrow_box:after,
-.arrow_box:before {
-  right: 100%;
-  top: 50%;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-}
-
-.arrow_box:after {
-  border-color: rgba(85, 85, 85, 0);
-  border-right-color: #555;
-  border-width: 10px;
-  margin-top: -10px;
-}
-.arrow_box:before {
-  border-color: rgba(0, 0, 0, 0);
-  border-right-color: #000000;
-  border-width: 13px;
-  margin-top: -13px;
-}
 /* #chart .apexcharts-tooltip {
   color: #fff;
   overflow: visible !important;
